--- a/deny.toml
+++ b/deny.toml
@@ -1,12 +1,10 @@
 [advisories]
-vulnerability = "deny"
 unmaintained = "workspace"
-unsound = "all"
+unsound = "workspace"
 yanked = "deny"
 ignore = []
 
 [licenses]
-unlicensed = "deny"
 allow = [
     "MIT",
     "Apache-2.0",
@@ -19,8 +17,8 @@ allow = [
     "BSL-1.0",
     "CC0-1.0",
     "OpenSSL",
+    "MPL-2.0",
 ]
-copyleft = "deny"
 
 [bans]
 multiple-versions = "warn"
